--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PresentationSampleArchive</string>
+
+    <string name="next_button_text">Next</string>
+    <string name="prev_button_text">Prev</string>
 </resources>
