문자열 리소스. rename package.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="next_button_text">Next</string>
     <string name="prev_button_text">Prev</string>
+
+    <string name="source_screen_title">Source</string>
+    <string name="destination_screen_title">Destination</string>
 </resources>
