--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="source_screen_title">Source</string>
     <string name="destination_screen_title">Destination</string>
+    <string name="other_destination_screen_title">Other Destination</string>
 </resources>
